# 3d-skeleton-pose-estimation

./: .gitattributes  .gitignore  README.md  progress.txt  pyproject.toml  requirements.txt  run.py
config/: cameras.yaml
docs/: EVALUATION_PLAN.md  EVALUATION_REPORT.docx  EVALUATION_REPORT.hwpx  EVALUATION_REPORT.md  EVALUATION_REPORT_hwp.docx  EVALUATION_RESULTS.md
examples/: build_report_docx.py  build_report_hwpx_docx.py  consume_pose3d.py  eval_panoptic.py  fusion_demo.py  hybrid_3cam_demo.py  make_report_figures.py  mvor_fusion_demo.py  panoptic_demo.py  panoptic_video_demo.py  pose3d_video.py  realtime_demo.py  rgbd_video_demo.py  run_experiments.py
scripts/: setup-gpu.ps1
src/: __init__.py  pipeline.py  synthetic.py
src/calibration/: __init__.py  calibrate.py  camera_io.py  extrinsics.py  intrinsics.py  reprojection.py
src/core/: __init__.py  geometry.py  types.py
src/eval/: __init__.py  metrics.py  panoptic_gt.py  runner.py  stats.py
src/fusion/: __init__.py  depth_fusion.py
src/io/: __init__.py  depth_reader.py  frame_reader.py  keypoints_io.py
src/io/sources/: __init__.py  mvor.py  panoptic.py  realsense.py  rgbd_source.py  tum.py
src/pose2d/: __init__.py  rtmpose_detector.py
src/render/: __init__.py  live_view.py  skeleton_2d.py  skeleton_3d.py  video_writer.py
src/smoothing/: __init__.py  one_euro.py
src/triangulation/: __init__.py  dlt.py  robust.py
src/viz/: __init__.py  visualize_3d.py
tests/: test_calibration.py  test_eval_metrics.py  test_eval_stats.py  test_fusion.py  test_geometry.py  test_io_viz.py  test_mvor.py  test_one_euro.py  test_panoptic_gt.py  test_pipeline.py  test_pose2d.py  test_triangulation.py
