[project]
name = "skeleton-pose-3d"
version = "0.1.0"
description = "3D skeleton pose estimation from 2 RGB + 1 RGB-D cameras (RTMPose + multi-view triangulation + depth fusion). Inference only."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.24,<3.0",
    "scipy>=1.10,<2.0",
    "opencv-python>=4.8,<5.0",
    "PyYAML>=6.0,<7.0",
    "matplotlib>=3.7,<4.0",
    # rtmlib (RTMPose ONNX) pulls in onnxruntime (CPU), opencv-contrib-python, tqdm.
    # For NVIDIA GPU inference, after `uv sync` run:
    #   uv pip uninstall onnxruntime && uv pip install onnxruntime-gpu
    "rtmlib>=0.0.13",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]
# Optional NVIDIA CUDA GPU acceleration. Pins the exact, verified-working set for the
# project's target platform (Windows x86_64). NOT installed by the default `uv sync`,
# and NOT a clean drop-in: onnxruntime-gpu and the CPU onnxruntime (pulled in transitively
# by rtmlib) install to the SAME `onnxruntime` import path, so the CPU build must be
# uninstalled first. cuDNN is pinned <9.12 because 9.12+ (e.g. 9.23) breaks onnxruntime
# 1.26's CUDA provider (CUDNN_BACKEND_API_FAILED -> silent CPU fallback). See the
# "(참고) GPU 가속 (NVIDIA CUDA)" section in README.md for the exact install + run steps.
gpu = [
    "onnxruntime-gpu>=1.26,<2.0 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "nvidia-cudnn-cu12>=9.11,<9.12 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "nvidia-cublas-cu12 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "nvidia-cuda-runtime-cu12 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "nvidia-cufft-cu12 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "nvidia-curand-cu12 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "nvidia-cuda-nvrtc-cu12 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.uv]
# Dependency-only ("virtual") project: src/ is imported by path, not pip-installed,
# so uv should manage the environment without trying to build this as a package.
package = false
