[project]
name = "skeleton-pose-3d"
version = "0.1.0"
description = "3D skeleton pose estimation from 2 RGB + 1 RGB-D cameras (RTMPose + multi-view triangulation + depth fusion). Inference only."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.24,<3.0",
    "scipy>=1.10,<2.0",
    "opencv-python>=4.8,<5.0",
    "PyYAML>=6.0,<7.0",
    "matplotlib>=3.7,<4.0",
    # rtmlib (RTMPose ONNX) pulls in onnxruntime (CPU), opencv-contrib-python, tqdm.
    # For NVIDIA GPU inference, after `uv sync` run:
    #   uv pip uninstall onnxruntime && uv pip install onnxruntime-gpu
    "rtmlib>=0.0.13",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]
# Version-pin reference for NVIDIA CUDA GPU acceleration (Windows x86_64). This group is
# NOT a working install path: `uv sync --group gpu` also keeps the CPU onnxruntime that
# rtmlib pulls in transitively, and onnxruntime + onnxruntime-gpu share the SAME
# `onnxruntime/` folder, which kills the CUDA provider (verified: [Tensorrt,CUDA,CPU] ->
# [Azure,CPU]). uv cannot drop that transitive CPU dep. To actually enable GPU, run
# `./scripts/setup-gpu.ps1` (uninstalls CPU onnxruntime, installs this stack, verifies
# CUDA) and set UV_NO_SYNC=1 so `uv run` does not auto-revert. cuDNN is pinned <9.12
# because 9.12+ (e.g. 9.23) breaks onnxruntime 1.26's CUDA provider
# (CUDNN_BACKEND_API_FAILED -> silent CPU fallback). See README "(참고) GPU 가속".
gpu = [
    "onnxruntime-gpu>=1.26,<2.0 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "nvidia-cudnn-cu12>=9.11,<9.12 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "nvidia-cublas-cu12 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "nvidia-cuda-runtime-cu12 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "nvidia-cufft-cu12 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "nvidia-curand-cu12 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "nvidia-cuda-nvrtc-cu12 ; sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.uv]
# Dependency-only ("virtual") project: src/ is imported by path, not pip-installed,
# so uv should manage the environment without trying to build this as a package.
package = false
